<resources>
    <string name="app_name">Kibbble</string>

    <!-- Card swipe text -->
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>

    <string name="facebook_app_id">649663168567309</string>

    <!-- Splashscreen strings -->
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="subheader">It\'s Tinder for dogs</string>
    <string name="login_error">Error signing in</string>

    <!-- Login strings -->
    <string name="title_activity_login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login_facebook">Login with Facebook</string>

    <!-- Main screen strings -->
    <string name="no_more_pets_message">No adoptable dogs nearby</string>
    <string name="error_fetching_pets">An error occurred finding pets in your area</string>

    <!-- Settings strings -->
    <string name="title_activity_settings">Settings</string>
    <string name="filters">Filters:</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="size">Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="age">Age</string>
    <string name="apply">Apply</string>

    <!-- Saved strings -->
    <string name="sign_out">Sign Out</string>
</resources>
